report endpoints for student